fix typo; update aes, fpe dependencies to latest

--- a/zcash_primitives/Cargo.toml
+++ b/zcash_primitives/Cargo.toml
@@ -6,13 +6,13 @@ authors = [
 ]
 
 [dependencies]
-aes = "0.3"
+aes = "^0.7.5"
 blake2b_simd = "0.5"
 blake2s_simd = "0.5"
 byteorder = "1"
 crypto_api_chachapoly = "0.2.1"
 ff = { path = "../ff" }
-fpe = "0.2"
+fpe = "0.5.1"
 hex = "0.3"
 lazy_static = "1"
 pairing = { path = "../pairing" }
