--- a/zcash_primitives/Cargo.toml
+++ b/zcash_primitives/Cargo.toml
@@ -35,7 +35,8 @@ proptest = { version = "0.10.1", optional = true }
 rand = "0.7"
 rand_core = "0.5.1"
 ripemd160 = { version = "0.9", optional = true }
-secp256k1 = { version = "0.19", optional = true }
+# secp256k1 = { version = "0.19", optional = true }
+libsecp256k1 = { version = "=0.3.5", optional = true }
 sha2 = "0.9"
 subtle = "2.2.3"
 
@@ -46,7 +47,7 @@ proptest = "0.10.1"
 rand_xorshift = "0.2"
 
 [features]
-transparent-inputs = ["ripemd160", "secp256k1"]
+transparent-inputs = ["ripemd160", "libsecp256k1"]
 test-dependencies = ["proptest"]
 
 [[bench]]
